Jackson for JSON

--- a/架构.md
+++ b/架构.md
@@ -1,9 +1,50 @@
-启动：
-    mysql
-        sudo /usr/local/mysql-8.0.25-macos11-x86_64/support-files/mysql.server start
-    redis
-        cd /Users/bandong/Documents/develop/tool/redis-7.2.4
-            ./bin/redis-server etc/redis.conf
-    nacos
-        cd /Users/bandong/Documents/develop/tool/nacos/bin
-            sh startup.sh -m standalone
+##### 启动
+
+```yml
+mysql
+	sudo /usr/local/mysql-8.0.25-macos11-x86_64/support-files/mysql.server start
+redis
+	cd /Users/bandong/Documents/develop/tool/redis-7.2.4
+	./bin/redis-server etc/redis.conf
+nacos
+	cd /Users/bandong/Documents/develop/tool/nacos/bin
+	sh startup.sh -m standalone
+
+```
+
+##### 知识点
+
+###### ObjectMapper
+
+```java
+	ObjectMapper是Jackson库的核心类，主要用于Java对象与JSON之间的序列化和反序列化操作。以下是其常用方法分类及说明
+<!--Jackson-->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.13.0</version>
+</dependency>
+序列化方法（Java对象转JSON）
+    writeValueAsString(Object value)：将对象转换为JSON字符串
+    writeValue(File resultFile, Object value)：将对象序列化到文件
+    writeValue(OutputStream out, Object value)：输出到字节流
+    writeValue(Writer w, Object value)：输出到字符流
+反序列化方法（JSON转Java对象）
+    readValue(String content, Class<T> valueType)：JSON字符串转对象
+    readValue(File src, Class<T> valueType)：从文件读取JSON并转对象
+    readValue(InputStream src, Class<T> valueType)：从字节流反序列化
+    readValue(Reader src, Class<T> valueType)：从字符流反序列化
+    readValue(String content, TypeReference<T> valueTypeRef)：支持泛型转换（如List<MyClass>）
+树模型方法（处理动态JSON结构）
+    readTree(String content)：将JSON解析为JsonNode树结构
+    valueToTree(Object value)：对象转为树模型
+    treeToValue(JsonNode node, Class<T> valueType)：树模型转对象
+配置方法
+    enable/disable(SerializationFeature/DeserializationFeature)：启用/禁用特定特性（如美化输出、忽略未知属性）
+    setDateFormat(DateFormat dateFormat)：自定义日期格式
+    setSerializationInclusion(JsonInclude.Include)：控制空值字段的序列化行为
+    registerModule(Module module)：注册自定义模块（如Java 8时间处理模块）
+        
+```
+
+
