多数据源配置

--- a/架构.md
+++ b/架构.md
@@ -47,4 +47,18 @@ nacos
         
 ```
 
+##### 项目
 
+**by-cloud-common**：存放通用类
+
+**by-cloud-gateway**：网关
+
+**by-cloud-service-contract**：合同管理
+
+**by-cloud-service-file**：文件
+
+**by-cloud-service-upms**：用户
+
+**by-springBoot-devTools**：脚手架
+
+**by-dynamic-data-source**：动态多数据源
