--- a/架构.md
+++ b/架构.md
@@ -62,3 +62,9 @@ nacos
 **by-springBoot-devTools**：脚手架
 
 **by-dynamic-data-source**：动态多数据源
+
+
+@DS("read_db")    // 读库
+@DS("write_db")   // 写库
+@DS("report_db")  // 报表库
+@DS("log_db")     // 日志库
