lesson01包路径调整

--- a/架构.md
+++ b/架构.md
@@ -63,6 +63,7 @@ nacos
 
 **by-dynamic-data-source**：动态多数据源
 
+**by-springBoot-lesson01**：日常练习01
 
 @DS("read_db")    // 读库
 @DS("write_db")   // 写库
